--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -8,6 +8,7 @@ default_conf:
         start_epoch: 0
         epochs: 220
         schedule: [150, 175, 200]
+        em_valid_int: 0
 
     model_hourglass: &MODEL_HOURGLASS
         flip: true
@@ -16,50 +17,40 @@ default_conf:
 
     dataset_mpii: &DATASET_MPII
         selective: experiments/sel.npy
-        label_type: Gaussian
         label_sigma: 1
         label_sigma_decay: 0
-        contrast_factor: 0
-        brightness_factor: 0
 
 hg:
     <<: *DEFAULT
-    id: 0
+    id: 1
     name: hg
     model:
         <<: *MODEL_HOURGLASS
         stack: 3
-
-pair:
-    <<: *DEFAULT
-    id: 0
-    name: pair
-    model:
-        flip: true
-        stack: 3
-        block: 1
     dataset:
         <<: *DATASET_MPII
 
 locate:
     <<: *DEFAULT
-    id: 0
+    id: 6
     name: locate
-    learning_rate: 5.e-4
+    learning_rate: 2.e-4
     train_batch: 32
     test_batch: 32
+    em_valid_int: 200
     model:
         part_locate: 0
         hg_dim: 256
-        bn: true
+        bn: false
 
 stretch:
     <<: *DEFAULT
     id: 0
     name: stretch
     learning_rate: 5.e-4
-    train_batch: 32
-    test_batch: 32
+    train_batch: 20
+    test_batch: 20
+    em_valid_int: 200
     model:
         part_locate: 0
         hg_dim: 256
