--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -101,7 +101,7 @@ ae:
 
 chain:
     <<: *DEFAULT
-    id: 0
+    id: 1
     name: chain
     learning_rate: 2.e-4
     lr_gamma: 0.5
@@ -117,6 +117,8 @@ chain:
         max_num_people: 30
         loss_det_cof: 1
         loss_field_cof: 0.0001
+    dataset:
+        label_field_radius: 2
     eval:
         detection_thres: 0.1
         group_thres: 0.86
