--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -122,3 +122,26 @@ chain:
     eval:
         detection_thres: 0.1
         group_thres: 0.86
+
+ae2d:
+    <<: *DEFAULT
+    id: 0
+    name: ae2d
+    learning_rate: 2.e-4
+    lr_gamma: 0.5
+    epochs: 200
+    schedule: [100]
+    train_batch: 16
+    test_batch: 16
+    model:
+        nstack: 4
+        hg_dim: 256
+        increase: 128
+        bn: false
+        max_num_people: 30
+        loss_det_cof: 1
+        loss_em_push_cof: 1.e-4
+        loss_em_pull_cof: 1.e-3
+    eval:
+        detection_thres: 0.1
+        group_thres: 0.86
