--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -125,7 +125,7 @@ chain:
 
 ae2d:
     <<: *DEFAULT
-    id: 3
+    id: 4
     name: ae2d
     learning_rate: 2.e-4
     lr_gamma: 0.5
@@ -137,7 +137,7 @@ ae2d:
         nstack: 4
         hg_dim: 256
         increase: 128
-        bn: true
+        bn: false
         max_num_people: 30
         loss_det_cof: 1
         loss_em_push_cof: 1.e-4
