[Exp] baybase_5: remove weight on layers of loss; use correct sigma
The sigmas 7,9,11,15 in original paper is considered to be sigma,
while it is not. It is actually ksize of cv2.GaussianBlur.
sigma = 0.3*((ksize-1)*0.5 - 1) + 0.8

--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -162,7 +162,7 @@ baybase:
     model:
         inp_shape: [192, 256]
         out_shape: [48, 64]
-        gaussian_kernels: [8, 5, 3, 2]
+        gaussian_kernels: [2.6, 2., 1.7, 1.4] # sigma = 0.3*((ksize-1)*0.5 - 1) + 0.8
     dataset:
         ext_border: [0.1, 0.15]
         scale_factor: 0.25
