--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -168,3 +168,23 @@ baybase:
         scale_factor: 0.25
         rotate_factor: 30
         translation_factor: 0.05
+
+bayproj:
+    <<: *DEFAULT
+    name: baybase
+    id: 7
+    learning_rate: 5.e-4
+    lr_gamma: 0.5
+    epochs: 200
+    schedule: [76, 92, 102]
+    train_batch: 32
+    test_batch: 32
+    model:
+        inp_shape: [192, 256]
+        out_shape: [48, 64]
+        gaussian_kernels: [2.6, 2., 1.7, 1.4] # sigma = 0.3*((ksize-1)*0.5 - 1) + 0.8
+    dataset:
+        ext_border: [0.1, 0.15]
+        scale_factor: 0.25
+        rotate_factor: 30
+        translation_factor: 0.05
