[Exp] baybase_8: Use GN; change last of globalNet._predict fr BtN to Cv

--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -178,10 +178,10 @@ bayproj:
     lr_gamma: 0.5
     epochs: 200
     schedule: [100]
-    train_batch: 32
-    test_batch: 32
+    train_batch: 128
+    test_batch: 128
     model:
-        resnet_pretrained: true
+        resnet_pretrained: false
         bayproj_lr: 5.e-4
         loss_outsider_cof: 0.001
         inp_shape: [192, 256]
