--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -174,7 +174,7 @@ baybase:
 bayproj:
     <<: *DEFAULT
     name: baybase
-    id: 9
+    id: 10
     learning_rate: 5.e-4
     lr_gamma: 0.5
     epochs: 200
@@ -185,6 +185,7 @@ bayproj:
         resnet_pretrained: pretrained/resnet50_gn.pth
         bayproj_lr: 1.e-4
         loss_outsider_cof: 0.001
+        loss_close_cof: 0.001
         inp_shape: [192, 256]
         out_shape: [48, 64]
         gaussian_kernels: [2.6, 2., 1.7, 1.4] # sigma = 0.3*((ksize-1)*0.5 - 1) + 0.8
