Parameterize parse threshold to avoid forgetting it

--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -164,6 +164,7 @@ baybase:
         inp_shape: [192, 256]
         out_shape: [48, 64]
         gaussian_kernels: [2.6, 2., 1.7, 1.4] # sigma = 0.3*((ksize-1)*0.5 - 1) + 0.8
+        parse_threshold: 0.1
     dataset:
         mean_std_file: mean_std_resnet_pretrained.pth
         ext_border: [0.1, 0.15]
@@ -189,6 +190,7 @@ bayproj:
         inp_shape: [192, 256]
         out_shape: [48, 64]
         gaussian_kernels: [2.6, 2., 1.7, 1.4] # sigma = 0.3*((ksize-1)*0.5 - 1) + 0.8
+        parse_threshold: 0.1
     dataset:
         mean_std_file: mean_std_resnet_pretrained.pth
         ext_border: [0.1, 0.15]
