[Exp] baymini_1/Aug21_14-54-53: Use resnet18_gn, trained from start

--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -214,7 +214,7 @@ bayproj:
 baymini:
     <<: *DEFAULT
     name: baymini
-    id: 2
+    id: 1
     learning_rate: 5.e-4
     lr_gamma: 0.5
     epochs: 100
@@ -228,7 +228,7 @@ baymini:
         gaussian_kernels: [2.6, 2., 1.7, 1.4] # sigma = 0.3*((ksize-1)*0.5 - 1) + 0.8
         parse_threshold: 0.1
         detail:
-            block_index: [null, 1, null, null]
+            block_index: [null, null, null, null]
             channels_per_pos: 3
             displace_stride: 4
     dataset:
