[Exp] baymini_8/Aug24_18-39-08
- Enable displace
- Higher learning rate (1e-2) for offset
- Delayed offset training after step 13086

--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -214,13 +214,14 @@ bayproj:
 baymini:
     <<: *DEFAULT
     name: baymini
-    id: 7
+    id: 8
     learning_rate: 5.e-4
     lr_gamma: 0.5
     epochs: 100
     schedule: []
     train_batch: 16
     test_batch: 16
+    offset_lr: 1.e-2
     model:
         resnet_pretrained: null
         inp_shape: [192, 256] # W, H
@@ -233,8 +234,8 @@ baymini:
             displace_stride: 4
             displace_fill: false
             displace_learnable_offset: true
-            displace_LO_min_step: 6000
-            disable_displace: true
+            displace_LO_min_step: 13086
+            disable_displace: false
     dataset:
         mean_std_file: mean_std.pth
         ext_border: [0.1, 0.15]
