Fix bugs and improve
- Add runs_archive folder into .gitignore
- Move is_train into progress during calling iter_process
- Add post_train mechanism

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ data/mpii/images
 data/mscoco/images
 data/mscoco/person_keypoints_*.json
 runs
+runs_archived
 .vscode
 sftp-config.json
 pose/models/ae_loss/lib
