[Exp] baymini_16/Aug27_18-12-47
- addition delayed version compared to baymini_2/Aug21_18-22-03

--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -248,6 +248,37 @@ baymini:
         rotate_factor: 30
         translation_factor: 0.05
 
+baymini_base:
+    <<: *DEFAULT
+    name: baymini
+    id: 16
+    learning_rate: 5.e-4
+    lr_gamma: 0.5
+    epochs: 100
+    schedule: []
+    train_batch: 16
+    test_batch: 16
+    model:
+        resnet_pretrained: null
+        inp_shape: [192, 256] # W, H
+        out_shape: [48, 64] # W, H
+        gaussian_kernels: [2.6, 2., 1.7, 1.4] # sigma = 0.3*((ksize-1)*0.5 - 1) + 0.8
+        parse_threshold: 0.1
+        detail:
+            block_index: [null, 1, null, null]
+            channels_per_pos: 3
+            displace_stride: 4
+            displace_fill: false
+            disable_displace: false
+            random_offset: 0
+            use_origin: false
+    dataset:
+        mean_std_file: mean_std.pth
+        ext_border: [0.1, 0.15]
+        scale_factor: 0.25
+        rotate_factor: 30
+        translation_factor: 0.05
+
 baycrf:
     <<: *DEFAULT
     name: baybase
