[Exp] baymini_18/Aug28_10-24-32
extra_mod extended version compared to baymini_2/Aug21_18-22-03
Compare with last exp:
- Reenable displace
- Change addtion of extra_out back to before basicblock
- Use displace for all 4 res mod
    * block_index: 1, 1, 1, 1
    * chan_per_pos: 3, 3, 3, 16
    * displace_stride: 16, 4, 2, 2

--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -251,7 +251,7 @@ baymini:
 baymini_base:
     <<: *DEFAULT
     name: baymini
-    id: 17
+    id: 18
     learning_rate: 5.e-4
     lr_gamma: 0.5
     epochs: 100
@@ -265,11 +265,11 @@ baymini_base:
         gaussian_kernels: [2.6, 2., 1.7, 1.4] # sigma = 0.3*((ksize-1)*0.5 - 1) + 0.8
         parse_threshold: 0.1
         detail:
-            block_index: [null, 1, null, null]
-            channels_per_pos: 3
-            displace_stride: 4
+            block_index: [1, 1, 1, 1]
+            channels_per_pos: [3, 3, 3, 16]
+            displace_stride: [16, 4, 2, 2]
             displace_fill: false
-            disable_displace: true
+            disable_displace: false
             random_offset: 0
             use_origin: false
     dataset:
