--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -251,7 +251,7 @@ baymini:
 baymini_base:
     <<: *DEFAULT
     name: baymini
-    id: 19
+    id: 20
     learning_rate: 5.e-4
     lr_gamma: 0.5
     epochs: 100
@@ -265,9 +265,10 @@ baymini_base:
         gaussian_kernels: [2.6, 2., 1.7, 1.4] # sigma = 0.3*((ksize-1)*0.5 - 1) + 0.8
         parse_threshold: 0.1
         detail:
-            block_index: [0, 0, 0, 0]
-            channels_per_pos: [3, 3, 3, 3]
-            displace_stride: [16, 16, 4, 2]
+            block_index: [null, 1, null, null]
+            channels_per_pos: [3, 3, 3, 16]
+            displace_stride: [16, 4, 2, 2]
+            pseudo_stride: true
             displace_fill: false
             disable_displace: false
             random_offset: 0
