--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -251,7 +251,7 @@ baymini:
 baymini_base:
     <<: *DEFAULT
     name: baymini
-    id: 24
+    id: 25
     learning_rate: 5.e-4
     lr_gamma: 0.5
     epochs: 100
@@ -269,7 +269,7 @@ baymini_base:
             channels_per_pos: [2, 3, 8, null]
             displace_stride: [3, 3, 3, null]
             displace_bounding: [0.3, 0.5, 0.75, null]
-            actual_stride: [null, null, null, null]
+            actual_stride: [2, 2, 2, null]
             displace_fill: false
             disable_displace: false
             random_offset: 0
