--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -251,7 +251,7 @@ baymini:
 baymini_base:
     <<: *DEFAULT
     name: baymini
-    id: 29
+    id: 30
     learning_rate: 5.e-4
     lr_gamma: 0.5
     epochs: 100
@@ -264,15 +264,17 @@ baymini_base:
         out_shape: [48, 64] # W, H
         gaussian_kernels: [2.6, 2., 1.7, 1.4] # sigma = 0.3*((ksize-1)*0.5 - 1) + 0.8
         parse_threshold: 0.1
+        resnet: 50
         detail:
             block_index: [1, 1, 1, null]
-            channels_per_pos: [2, 3, 8, null]
-            displace_stride: [3, 3, 3, null]
-            displace_bounding: [0.3, 0.5, 0.75, null]
-            actual_stride: [1, 1, 1, null]
+            channels_per_pos: [16, 32, 64, null]
+            displace_stride: [2, 2, 2, null]
+            displace_size: [[5, 5], [5, 5], [3, 3], null]
+            displace_bounding: [-1, -1, -1, null]
+            actual_stride: [2, 2, 2, null]
             displace_fill: false
             disable_displace: false
-            use_dconv: true
+            use_dconv: false
             random_offset: 0
             use_origin: true
     dataset:
